# doc2pptx

./: .gitignore  README.md  add_summaries.py  condense_topical_summaries.py  doc2pptx.py  gradio_app.py  main.py  notes.md  pyproject.toml  slide_outline.md  summarize_transcripts.py  todo.md
doc2pptx/: __init__.py  __main__.py  cli.py  llm.py  logging_config.py  models.py  parser.py  pipeline.py  readers.py  renderer.py  template.py
examples/: Academic_Presentation_Template.pptx  section_outline.md
yt2pptx/: get_transcripts.sh  summarize_transcripts_simple.py  youtube_urls.txt
