[project]
name = "doc2pptx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "markdown>=3.10.2",
    "pdfplumber>=0.11.9",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]
