[project]
name = "doc2pptx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "gradio>=4.44.1",
    "huggingface-hub==0.34.3",
    "markdown>=3.9",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.8",
    "pydantic==2.10.6",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]
