[project]
name = "doc2pptx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.71.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "nbformat>=5.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.14.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "tqdm>=4.65.0",
    "beautifulsoup4>=4.14.3",
    "gradio>=4.44.1",
    "httpx>=0.27",
    "huggingface-hub==0.34.3",
    "markdown>=3.9",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.8",
    "pydantic==2.10.6",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]
